parslers-benchmark/src/tests/invalid/semanticErr/while/falsErr.wacc
# false typo

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  while fals do
    skip
  done
end
